--- a/package.json
+++ b/package.json
@@ -29,10 +29,6 @@
     "lodash": "^4.17.4"
   },
   "devDependencies": {
-    "body-parser": "^1.17.1",
-    "express": "^4.15.2",
-    "http": "0.0.0",
-    "mocha": "^3.3.0",
-    "request": "^2.81.0"
+    "mocha": "^3.3.0"
   }
 }
