--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "lodash": "^4.17.4"
   },
   "devDependencies": {
-    "mocha": "^3.3.0"
+    "mocha": "^3.3.0",
+    "socket.io": "^1.7.3",
+    "socket.io-client": "^1.7.3"
   }
 }
