--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "express-socket.io-router",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Express-like routing interface for Socket.IO",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/vpalmisano/express-socket.io"
+    "url": "git+https://github.com/vpalmisano/express-socket.io-router"
   },
   "author": {
     "email": "vpalmisano@gmail.com",
@@ -21,9 +21,9 @@
   ],
   "license": "Apache-2.0",
   "bugs": {
-    "url": "https://github.com/vpalmisano/express-socket.io/issues"
+    "url": "https://github.com/vpalmisano/express-socket.io-router/issues"
   },
-  "homepage": "https://github.com/vpalmisano/express-socket.io#readme",
+  "homepage": "https://github.com/vpalmisano/express-socket.io-router#readme",
   "dependencies": {
     "debug": "^2.6.6",
     "lodash": "^4.17.4"
